<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/paddingButton">

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textdimen"
        android:layout_marginTop="@dimen/paddingButton"
        android:gravity="center"
        android:maxLength="50"
        android:textColor="@android:color/black"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textdimen"
        android:layout_below="@+id/editTextEmail"
        android:gravity="center"
        android:password="true"
        android:maxLength="40"
        android:textColor="@android:color/black"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/editTextAppID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textdimen"
        android:layout_below="@+id/editTextPass"
        android:gravity="center"
        android:password="true"
        android:maxLength="50"
        android:textColor="@android:color/black"
        android:hint="@string/appId" />

    <EditText
        android:id="@+id/editTextThingToken"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textdimen"
        android:layout_marginBottom="@dimen/paddingButton"
        android:layout_below="@+id/editTextAppID"
        android:gravity="center"
        android:maxLength="60"
        android:textColor="@android:color/black"
        android:hint="@string/thingToken" />

    <CheckBox
        android:layout_below="@+id/editTextThingToken"
        android:id="@+id/checkBoxShowPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="Show hidden text"/>

    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearButtons"
        android:orientation="horizontal"
        android:layout_below="@+id/checkBoxShowPass"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        >
        <Button
            android:id="@+id/dialogButtonOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/paddingButton"
            android:gravity="center"
            style="@style/btnStyleYellow"
            android:textSize="@dimen/textdimen"
            android:text="@string/ok" />

        <Button
            android:id="@+id/dialogButtonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/paddingButton"
            android:gravity="center"
            style="@style/btnStyleYellow"
            android:textSize="@dimen/textdimen"
            android:text="@string/cancel" />

    </LinearLayout>
 
</RelativeLayout>
</ScrollView>